RESOLVED FIXED283339
REGRESSION (iOS 18.2 Beta): Crash when presenting Camera via Web View in - WebCore::AVVideoCaptureSource::create
https://bugs.webkit.org/show_bug.cgi?id=283339
Summary REGRESSION (iOS 18.2 Beta): Crash when presenting Camera via Web View in - We...
pavel.uvarov
Reported 2024-11-18 17:44:13 PST
Created attachment 473274 [details] Thread Stack Trace We are experiencing thousands of crashes in our application when attempting to present the camera through a Web View. The app crashes during this process, and the crash logs point to WebCore::AVVideoCaptureSource::create WebCore::RealtimeMediaSourceCenter::getUserMediaDevices. This issue has **only** been observed **in iOS 18.2 beta** versions (beta 1 - 22C5109p, beta 2 - 22C5125e, beta 3 - 22C5131e). In iOS versions below 18.2, the functionality works and we haven't identified any correlation with specific device models. The problem seems to stem from a WebCore framework introduced in these beta releases 18.2. We kindly request a review and fix for this issue in upcoming beta releases to restore functionality. Let us know if there are any workarounds or adjustments we can implement in the interim. Thank you for your attention to this matter.
Attachments
Thread Stack Trace (14.54 KB, text/plain)
2024-11-18 17:44 PST, pavel.uvarov
no flags
Alexey Proskuryakov
Comment 1 2024-11-19 10:21:57 PST
Thank you for the report. I am unable to locate any other reports of this, or any telemetry showing this crash. Would you be willing provide more information elsewhere (preferably https://feedbackassistant.apple.com/, or you could email me directly)? - full crash log - sysdiagnose - steps to reproduce - or at least the application bundle ID, if none the above is possible.
Radar WebKit Bug Importer
Comment 2 2024-11-19 10:22:08 PST
pavel.uvarov
Comment 3 2024-11-19 11:51:49 PST
Hi Alexey Proskuryakov, Thank you for getting back to us. We have filed the issue through the Apple Feedback Assistant (FB15877212). I’ll send the remaining information via email shortly.
pavel.uvarov
Comment 4 2024-11-19 11:52:26 PST
(In reply to Radar WebKit Bug Importer from comment #2) > <rdar://problem/140210724> Hi Alexey Proskuryakov, Thank you for getting back to us. We have filed the issue through the Apple Feedback Assistant (FB15877212). I’ll send the remaining information via email shortly.
youenn fablet
Comment 5 2024-11-19 11:52:45 PST
youenn fablet
Comment 6 2024-11-19 12:18:27 PST
Thanks Pavel, In the email, could you tell us how frequent the crash is and if you have workarounds to prevent usage of the camera?
pavel.uvarov
Comment 7 2024-11-19 12:28:53 PST
(In reply to youenn fablet from comment #6) > Thanks Pavel, > > In the email, could you tell us how frequent the crash is and if you have > workarounds to prevent usage of the camera? Thank you, Youenn. We are observing 1,000 to 1,600 crashes per day on Sentry related to this issue. Unfortunately, we cannot prevent the use of the camera in the Web View, as it is a core functionality required for identity verification processes, e.g., scanning a Driver’s License.
youenn fablet
Comment 8 2024-11-19 12:59:04 PST
youenn fablet
Comment 9 2024-11-19 13:00:34 PST
EWS
Comment 10 2024-11-19 14:28:17 PST
Committed 286820@main (e330b5ddc996): <https://commits.webkit.org/286820@main> Reviewed commits have been landed. Closing PR #36860 and removing active labels.
pavel.uvarov
Comment 11 2024-11-19 17:24:37 PST
(In reply to youenn fablet from comment #9) > <rdar://problem/140122539> Thank you very much, Youenn and Alexey, for the lightning-fast fix.
EWS
Comment 12 2024-12-02 11:33:23 PST
Committed 283286.539@safari-7620-branch (a1abd7e74e4f): <https://commits.webkit.org/283286.539@safari-7620-branch> Reviewed commits have been landed. Closing PR #2349 and removing active labels.
pavel.uvarov
Comment 13 2024-12-02 12:32:24 PST
Hi team, We are currently observing over 2.9K crashes in our app related to this issue. Since the fix has not been included in iOS 18.2 beta 4, this problem continues to affect a critical workflow in our app. We would like to test whether the PR has resolved this issue. Could you please provide any suggestions on how we might test this fix before the release of iOS 18.2 beta 5? Additionally, we would greatly appreciate any information on whether this fix is planned to be included in beta 5. Thank you for your assistance!
Alexey Proskuryakov
Comment 14 2024-12-05 11:51:52 PST
This fix is present in iOS 18.2 RC seed (22C150).
pavel.uvarov
Comment 15 2024-12-05 12:22:30 PST
(In reply to Alexey Proskuryakov from comment #14) > This fix is present in iOS 18.2 RC seed (22C150). Thank you very much for the update, Alexey.
Ryosuke Niwa
Comment 16 2025-01-14 23:10:24 PST
Hi Pavel, could you tell me steps to reproduce this crash? I tried to signup as a dasher but I just get a message saying that San Francisco is currently closed to new dashers, and can't get to a point of opening camera in a web view.
Pavlo
Comment 17 2025-07-01 06:04:18 PDT
We are still facing the same crash trying to establish a WebRTC connection on an iPad running ipados 18.5 and on any iOS simulator. It consistently happens while loading a web page after using an NSAttributedString with NSAttributedString.DocumentType.html anywhere in the project.
youenn fablet
Comment 18 2025-07-01 07:54:33 PDT
Hi Pavlo, the latest iOS 18.6 beta should have a fix for a crash related to microphone capture, can you have a try? Also, can you provide the crash trace, here or privately at youenn@apple.com?
Pavlo
Comment 19 2025-07-02 00:35:58 PDT
Thank you, Youenn! After installing the iPadOS 18.6 beta 2 the crash is indeed gone.
Note You need to log in before you can comment on or make changes to this bug.